--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,7 +6,7 @@
 
     <div>
         If you clear the selection (Ctrl-click or ⌘-click) and submit, the
-        contents remain unchanged.
+        contents remain unchanged, instead of clearing as they should.
     </div>
     <div class="lift:ShowMultiselect"></div>
 </lift:surround>
