--- a/src/main/webapp/templates-hidden/default.html
+++ b/src/main/webapp/templates-hidden/default.html
@@ -1,12 +1,13 @@
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:lift="http://liftweb.net/">
+<!DOCTYPE HTML>
+<html>
 <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
     <meta name="description" content=""/>
     <meta name="keywords" content=""/>
 
-    <title>code:app:0.1-SNAPSHOT</title>
-    <lift:CSS.blueprint/>
-    <lift:CSS.fancyType/>
+    <title class="lift:Menu.title">Sample app - </title>
+    <style class="lift:CSS.blueprint"/>
+    <style class="lift:CSS.fancyType"/>
     <script id="jquery" src="/classpath/jquery.js" type="text/javascript"/>
     <script id="json" src="/classpath/json.js" type="text/javascript"/>
     <style type="text/css">
