--- a/src/main/webapp/templates-hidden/default.html
+++ b/src/main/webapp/templates-hidden/default.html
@@ -6,10 +6,10 @@
     <meta name="keywords" content=""/>
 
     <title class="lift:Menu.title">Sample app - </title>
-    <style class="lift:CSS.blueprint"/>
-    <style class="lift:CSS.fancyType"/>
-    <script id="jquery" src="/classpath/jquery.js" type="text/javascript"/>
-    <script id="json" src="/classpath/json.js" type="text/javascript"/>
+    <style class="lift:CSS.blueprint"></style>
+    <style class="lift:CSS.fancyType"></style>
+    <script id="jquery" src="/classpath/jquery.js" type="text/javascript"></script>
+    <script id="json" src="/classpath/json.js" type="text/javascript"></script>
     <style type="text/css">
         /* <![CDATA[ */
         .edit_error_class {
